--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,6 +16,10 @@
             </a>
         </div>
         <div class="navbar-right">
+            <a href="{{ url_for('verify') }}" class="btn btn-outline-light">
+                <i class="fas fa-check-circle"></i>
+                Verify
+            </a>
             <a href="{{ url_for('logout') }}" class="btn btn-outline-light">
                 <i class="fas fa-sign-out-alt"></i>
                 Logout
