changes on some UI/UX Elements

--- a/templates/verify.html
+++ b/templates/verify.html
@@ -43,7 +43,7 @@
 
         <button id="copyCertutil" class="copy-btn" style="display:none;">
             <i class="fas fa-copy"></i>
-            Copy certutil command
+            Copy CertUtil command
         </button>
         <p id="copiedMsg" class="copy-message" style="display: none;">
             <i class="fas fa-check"></i>
