--- a/templates/upload.html
+++ b/templates/upload.html
@@ -64,9 +64,11 @@
         </div>
     </div>
 
-    <footer>
+    <!-- <footer>
         <p>&copy; 2024 Secure File Storage. All rights reserved.</p>
-    </footer>
+    </footer> -->
+
+    {% include 'footer.html' %}
 
     <script>
         function updateFileName(input) {
