--- a/static/footer.css
+++ b/static/footer.css
@@ -1,11 +1,7 @@
 footer {
-    background-color: #343a40;
-    color: white;
+    background: #2d3748;
+    color: #e2e8f0;
     text-align: center;
-    padding: 10px 0;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    margin-top: 30px;
-    font-size: 14px;
+    padding: 1.5rem;
+    margin-top: auto;
 }
