--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -83,8 +83,11 @@
         {% endif %}
     </div>
 
-    <footer>
+    <!-- <footer>
         <p>&copy; 2024 Secure File Storage. All rights reserved.</p>
-    </footer>
+    </footer> -->
+
+    {% include 'footer.html' %}
+    
 </body>
 </html>
