--- a/templates/verify.html
+++ b/templates/verify.html
@@ -58,6 +58,8 @@
         </a>
     </div>
 
+    {% include 'footer.html' %}
+
     <script src="{{ url_for('static', filename='js/verify.js') }}"></script>
 </body>
 </html>
