--- a/templates/verify.html
+++ b/templates/verify.html
@@ -45,18 +45,24 @@
             <i class="fas fa-copy"></i>
             Copy CertUtil command
         </button>
+        
         <p id="copiedMsg" class="copy-message" style="display: none;">
             <i class="fas fa-check"></i>
             Copied to clipboard!
         </p>
-    </div>
 
-    <div class="action-buttons">
-        <a href="/dashboard" class="btn btn-secondary">
+        <a href="{{ url_for('dashboard') }}" class="back-link">
             <i class="fas fa-arrow-left"></i>
             Back to Dashboard
         </a>
     </div>
+
+    <!-- <div class="action-buttons">
+        <a href="/dashboard" class="btn btn-secondary">
+            <i class="fas fa-arrow-left"></i>
+            Back to Dashboard
+        </a>
+    </div> -->
 
     {% include 'footer.html' %}
 
