--- a/templates/verify.html
+++ b/templates/verify.html
@@ -51,10 +51,12 @@
             Copied to clipboard!
         </p>
 
-        <a href="{{ url_for('dashboard') }}" class="back-link">
-            <i class="fas fa-arrow-left"></i>
-            Back to Dashboard
-        </a>
+        <div class="back-link-container">
+            <a href="{{ url_for('dashboard') }}" class="back-link">
+                <i class="fas fa-arrow-left"></i>
+                Back to Dashboard
+            </a>
+        </div>
     </div>
 
     <!-- <div class="action-buttons">
